<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/aglCeleste"
    tools:context="com.guma.desarrollo.gmv.Activity.LoginActivity">





    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/image_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/logo_tsa" />

            <TextView
                android:textAlignment="center"
                android:id="@+id/txtintro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/intro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtintroe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/intro2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:textAlignment="center"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:backgroundTint="@color/aglAzul"

                    android:id="@+id/txtUsuerio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_id"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:text="" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:backgroundTint="@color/aglAzul"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_gravity="center"
                android:id="@+id/sign_in_button"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                style="?android:textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_primary_rounded"/>

            <ImageView
                android:paddingTop="150dp"
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_aglosa"/>
            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"

                >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_derchos_1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_derchos_2"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_derchos_3"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
